# Zad2-WdSO

./: BASIC.tar.xz  README.md
Basic Makefile version/: Makefile
Basic Makefile version/incl/: volume.h
Basic Makefile version/src/: area.c  main.c  volume.c
Extended Autotools version/: AUTHORS  Code2  Makefile  Makefile.am  Makefile.in  NEWS  area.h  config.status  configure  libtool  libvol.la  volume.lo
Extended Autotools version/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
